--- a/Documents/React-App/hello-world/src/App.css
+++ b/Documents/React-App/hello-world/src/App.css
@@ -1,32 +1,24 @@
 .App {
-  text-align: center;
+  text-align: top;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+
+.logo-fuusiolabs {  
+  height: 8vmin;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #010042;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(8px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.fussiolabs-logo{
+  height: 5vmin;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
